[gd_scene load_steps=17 format=4 uid="uid://cu5et2hkyhpuo"]

[ext_resource type="Texture2D" uid="uid://c3pnfnouiewui" path="res://assets/sprites/cenario02.png" id="1_ag2dx"]
[ext_resource type="Script" uid="uid://cj36ot7cdlu2m" path="res://scripts/lab_test_01.gd" id="1_kr1rr"]
[ext_resource type="Texture2D" uid="uid://drutjoa1y5g30" path="res://assets/sprites/damnBroLetsCode.png" id="1_swana"]
[ext_resource type="Texture2D" uid="uid://bl0ijw02ik1ku" path="res://assets/sprites/cenario03.png" id="2_88upj"]
[ext_resource type="Texture2D" uid="uid://by6pahl3crxa3" path="res://assets/sprites/phSprites.png" id="2_kd8jg"]
[ext_resource type="Texture2D" uid="uid://dyxcsyn1a87a6" path="res://assets/sprites/cenario01.png" id="2_vv700"]
[ext_resource type="PackedScene" uid="uid://cb6neg2ddhkn" path="res://scenes/objects/breakable_block.tscn" id="3_vv700"]
[ext_resource type="Texture2D" uid="uid://bafdra410sgl3" path="res://assets/sprites/wallCorner.png" id="4_88upj"]
[ext_resource type="PackedScene" uid="uid://cdwq7sa50f3wk" path="res://scenes/smallCamera.tscn" id="4_ag2dx"]
[ext_resource type="AudioStream" uid="uid://3ltw3qe7xh3" path="res://assets/audio/tracks/Pok√©monHeartGold&SoulSilver-GymLeader&EliteFourBattleMusic.mp3" id="5_88upj"]
[ext_resource type="PackedScene" uid="uid://bgkax6c3eo7n0" path="res://scenes/entities/manel.tscn" id="8_o2gsi"]
[ext_resource type="Script" uid="uid://6lulbtl7con2" path="res://scripts/ui.gd" id="13_ag2dx"]
[ext_resource type="FontFile" uid="uid://cdhtbd5mt3a81" path="res://assets/04B_30__.TTF" id="14_88upj"]
[ext_resource type="AudioStream" uid="uid://nr7l2q3ikch7" path="res://assets/audio/sfx/explosion.wav" id="15_k5tmf"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_01k7s"]
texture = ExtResource("2_kd8jg")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0

[sub_resource type="TileSet" id="TileSet_q7e64"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_01k7s")

[node name="MapTest02" type="Node2D"]
script = ExtResource("1_kr1rr")

[node name="floor" type="Sprite2D" parent="."]
position = Vector2(1, -16)
scale = Vector2(0.251647, 0.25)
texture = ExtResource("1_swana")

[node name="leftWall" type="Sprite2D" parent="."]
position = Vector2(-142, -16.5)
scale = Vector2(0.310976, 0.213408)
texture = ExtResource("1_ag2dx")

[node name="rightWall" type="Sprite2D" parent="."]
position = Vector2(141, -19)
scale = Vector2(0.285, -0.213275)
texture = ExtResource("2_88upj")

[node name="rightCorner" type="Sprite2D" parent="."]
position = Vector2(145.703, -137.783)
rotation = 1.57079
scale = Vector2(-0.232267, 0.205622)
texture = ExtResource("4_88upj")

[node name="rightCorner2" type="Sprite2D" parent="."]
position = Vector2(-147.698, -137.743)
rotation = 1.57079
scale = Vector2(-0.232941, -0.225524)
texture = ExtResource("4_88upj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-8, -8)
tile_map_data = PackedByteArray("AAD5//n/AQAAAAAAAAD6//n/AQAAAAAAAAD7//n/AQAAAAAAAAD8//n/AQAAAAAAAAD9//n/AQAAAAAAAAD+//n/AQAAAAAAAAD///n/AQAAAAAAAAAAAPn/AQAAAAAAAAABAPn/AQAAAAAAAAACAPn/AQAAAAAAAAADAPn/AQAAAAAAAAAEAPn/AQAAAAAAAAAFAPn/AQAAAAAAAAAGAPn/AQAAAAAAAAAHAPn/AQAAAAAAAAAHAPr/AQAAAAAAAAAHAPv/AQAAAAAAAAAHAPz/AQAAAAAAAAAHAP3/AQAAAAAAAAAHAP7/AQAAAAAAAAAHAP//AQAAAAAAAAAHAAAAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAHAAMAAQAAAAAAAAAHAAQAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAABAAUAAQAAAAAAAAAAAAUAAQAAAAAAAAD//wUAAQAAAAAAAAD+/wUAAQAAAAAAAAD9/wUAAQAAAAAAAAD8/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wQAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wAAAQAAAAAAAAD5////AQAAAAAAAAD5//7/AQAAAAAAAAD5//3/AQAAAAAAAAD5//z/AQAAAAAAAAD5//v/AQAAAAAAAAD5//r/AQAAAAAAAAD7//v/AQAAAAAAAAD9//v/AQAAAAAAAAD///v/AQAAAAAAAAABAPv/AQAAAAAAAAADAPv/AQAAAAAAAAAFAPv/AQAAAAAAAAAFAP3/AQAAAAAAAAADAP3/AQAAAAAAAAABAP3/AQAAAAAAAAD///3/AQAAAAAAAAD9//3/AQAAAAAAAAD7//3/AQAAAAAAAAD7////AQAAAAAAAAD9////AQAAAAAAAAD/////AQAAAAAAAAABAP//AQAAAAAAAAADAP//AQAAAAAAAAAFAP//AQAAAAAAAAAFAAEAAQAAAAAAAAADAAEAAQAAAAAAAAABAAEAAQAAAAAAAAD//wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD//wMAAQAAAAAAAAABAAMAAQAAAAAAAAADAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_q7e64")

[node name="fundo" type="Sprite2D" parent="."]
position = Vector2(0.500002, -135.375)
scale = Vector2(0.176428, 0.253)
texture = ExtResource("2_vv700")

[node name="AllBricks" type="Node2D" parent="."]
modulate = Color(0.753984, 0.753984, 0.753984, 1)

[node name="BreakableBlock4" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, -96)

[node name="BreakableBlock5" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -96)

[node name="BreakableBlock6" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, -96)

[node name="BreakableBlock7" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -96)

[node name="BreakableBlock8" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, -96)

[node name="BreakableBlock9" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -96)

[node name="BreakableBlock10" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, -96)

[node name="BreakableBlock15" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-80, -64)

[node name="BreakableBlock16" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, -64)

[node name="BreakableBlock17" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, -64)

[node name="BreakableBlock18" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -64)

[node name="BreakableBlock19" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, -64)

[node name="BreakableBlock20" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -64)

[node name="BreakableBlock21" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, -64)

[node name="BreakableBlock22" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -64)

[node name="BreakableBlock23" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, -64)

[node name="BreakableBlock24" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, -64)

[node name="BreakableBlock25" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(80, -64)

[node name="BreakableBlock27" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-96, -32)

[node name="BreakableBlock28" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-80, -32)

[node name="BreakableBlock29" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, -32)

[node name="BreakableBlock30" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, -32)

[node name="BreakableBlock31" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -32)

[node name="BreakableBlock32" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, -32)

[node name="BreakableBlock33" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -32)

[node name="BreakableBlock34" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, -32)

[node name="BreakableBlock35" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -32)

[node name="BreakableBlock36" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, -32)

[node name="BreakableBlock37" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, -32)

[node name="BreakableBlock38" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(80, -32)

[node name="BreakableBlock39" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(96, -32)

[node name="BreakableBlock40" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-96, 0)

[node name="BreakableBlock41" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-80, 0)

[node name="BreakableBlock42" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, 0)

[node name="BreakableBlock43" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, 0)

[node name="BreakableBlock44" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, 0)

[node name="BreakableBlock45" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, 0)

[node name="BreakableBlock46" parent="AllBricks" instance=ExtResource("3_vv700")]

[node name="BreakableBlock47" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, 0)

[node name="BreakableBlock48" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, 0)

[node name="BreakableBlock49" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, 0)

[node name="BreakableBlock50" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, 0)

[node name="BreakableBlock51" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(80, 0)

[node name="BreakableBlock52" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(96, 0)

[node name="BreakableBlock80" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-96, -48)

[node name="BreakableBlock81" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-96, -16)

[node name="BreakableBlock82" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-96, 16)

[node name="BreakableBlock84" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, -80)

[node name="BreakableBlock85" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, -48)

[node name="BreakableBlock86" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, -16)

[node name="BreakableBlock87" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, 16)

[node name="BreakableBlock88" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, 48)

[node name="BreakableBlock89" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -80)

[node name="BreakableBlock90" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -48)

[node name="BreakableBlock91" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, -16)

[node name="BreakableBlock92" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, 16)

[node name="BreakableBlock93" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, 48)

[node name="BreakableBlock94" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -80)

[node name="BreakableBlock95" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -48)

[node name="BreakableBlock96" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, -16)

[node name="BreakableBlock97" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, 16)

[node name="BreakableBlock98" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, 48)

[node name="BreakableBlock99" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -80)

[node name="BreakableBlock100" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -48)

[node name="BreakableBlock101" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, -16)

[node name="BreakableBlock102" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, 16)

[node name="BreakableBlock103" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, 48)

[node name="BreakableBlock104" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, -80)

[node name="BreakableBlock105" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, -48)

[node name="BreakableBlock106" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, -16)

[node name="BreakableBlock107" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, 16)

[node name="BreakableBlock108" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, 48)

[node name="BreakableBlock110" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(96, -48)

[node name="BreakableBlock111" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(96, -16)

[node name="BreakableBlock112" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(96, 16)

[node name="BreakableBlock54" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-80, 32)

[node name="BreakableBlock55" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-64, 32)

[node name="BreakableBlock56" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, 32)

[node name="BreakableBlock57" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, 32)

[node name="BreakableBlock58" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, 32)

[node name="BreakableBlock59" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, 32)

[node name="BreakableBlock60" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, 32)

[node name="BreakableBlock61" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, 32)

[node name="BreakableBlock62" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, 32)

[node name="BreakableBlock63" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(64, 32)

[node name="BreakableBlock64" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(80, 32)

[node name="BreakableBlock69" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-48, 64)

[node name="BreakableBlock70" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-32, 64)

[node name="BreakableBlock71" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(-16, 64)

[node name="BreakableBlock72" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(0, 64)

[node name="BreakableBlock73" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(16, 64)

[node name="BreakableBlock74" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(32, 64)

[node name="BreakableBlock75" parent="AllBricks" instance=ExtResource("3_vv700")]
position = Vector2(48, 64)

[node name="soundtrack02" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_88upj")
autoplay = true

[node name="Manel" parent="." instance=ExtResource("8_o2gsi")]
position = Vector2(0, -130)

[node name="mainCamera" parent="." instance=ExtResource("4_ag2dx")]
position = Vector2(0, -44)

[node name="bombaSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_k5tmf")
max_polyphony = 2

[node name="player1Pos" type="Node2D" parent="."]
position = Vector2(-96, -96)

[node name="player2Pos" type="Node2D" parent="."]
position = Vector2(96, 64)

[node name="players" type="Node2D" parent="."]

[node name="ui" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -224.0
offset_top = -168.0
offset_right = 224.0
offset_bottom = 80.0
script = ExtResource("13_ag2dx")

[node name="Polygon2D" type="Polygon2D" parent="ui"]
position = Vector2(5, 0)
scale = Vector2(1, 0.96875)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 56, 0, 56, 256, 29.3174, 256, 0, 256)

[node name="Polygon2D2" type="Polygon2D" parent="ui"]
position = Vector2(387, 0)
scale = Vector2(1, 0.96875)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(0, 0, 56, 0, 56, 256, 29.3174, 256, 0, 256, 0, 208.912, 0, 146.4, 0, 128.206)

[node name="score" type="Label" parent="ui"]
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 56.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("14_88upj")
theme_override_font_sizes/font_size = 15
text = "P1

(0)

---

P2

(0)

"
horizontal_alignment = 1

[node name="scoreManel" type="Label" parent="ui"]
layout_mode = 0
offset_left = 392.0
offset_top = 24.0
offset_right = 440.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("14_88upj")
theme_override_font_sizes/font_size = 15
text = "M
A
N
E
L

(0)"
horizontal_alignment = 1
